COR: contrast issue and removing / on the header

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,5 +61,5 @@ ul li {
 }
 
 ul li a {
-  color: aqua;
+  color: black;
 }
